responsive homepage layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <h1>23 °C <img src="/assets/images/sunny.png" alt="" /></h1>
             <p>Today's Beach Conditions</p>
             <div class="cta">
-              <button class="cta-select">Safe</button>
+              <button class="cta-select"><h1>SAFE</h1></button>
+            </div>
+            <div class="cta" id="wind-speed">
+              <button class="cta-select" id="wind-speed-select"><h2>Wind Speed</h2><h1 class="kph"><strong>28</strong>kph</h1><i class="bi bi-cursor-fill"></i></button>
             </div>
           </div>
         </div>
@@ -47,6 +50,7 @@
           <img src="/assets/images/live.jpg" alt="Live Footage" />
           <h1 class="cover-text">LIVE Smart Beach, ON</h1>
         </div>
+
       </section>
     </main>
   </body>
