nav link functional

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <nav>
         <ul class="nav-links" id="nav-list">
-          <li><a class="nav-link" href="#" id="nav-item">Live</a></li>
-          <li><a class="nav-link" href="#" id="nav-item">Forecast</a></li>
+          <li><a class="nav-link" href="https://beta-smart-beach.onrender.com/index.html" id="nav-item">Live</a></li>
+          <li><a class="nav-link" href="https://beta-smart-beach.onrender.com/forecast.html" id="nav-item">Forecast</a></li>
           <li><a class="nav-link" href="#" id="nav-item">About</a></li>
           <div class="hamburger-menu" id="hamburger" onclick="displayNav()">
             <span>|</span>
